--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=agendamento-notificacao-api
+
+spring.datasource.url=jdbc:mysql://localhost:3306/agendamento-notificacoes
+spring.datasource.username=root
+spring.datasource.password=123
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
