--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-
+version: '3.8'
 
 services:
   db:
@@ -12,6 +12,21 @@ services:
       - '3306:3306'
     volumes:
       - volume:/var/lib/mysql
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: agendamento-notificacoes-api
+    depends_on:
+      - db
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/agendamento-notificacoes
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: 123
+    restart: always
+
 volumes:
   volume:
-    driver: local
